@@ -11,6 +11,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   --block-size=1KiB, a new long option --kibibyte stands for -k.
   [bug introduced in coreutils-4.5.4]
 
+  ls -l would leak a little memory (security context string) for each
+  nonempty directory listed on the command line, when using SELinux.
+  [bug probably introduced in coreutils-6.10 with SELinux support]
+
   rm -rf DIR would fail with "Device or resource busy" on Cygwin with NWFS
   and NcFsd file systems.  This did not affect Unix/Linux-based kernels.
   [bug introduced in coreutils-8.0, when rm began using fts]
